OJ-Backend/outputs/9758900d-6918-4741-89ba-ea1a83175582_error.txt
  File "K:\Mission Apple\Algo University\Project\Django\OnlineJudge\codes\9758900d-6918-4741-89ba-ea1a83175582.py", line 1
    print(2+3
         ^
SyntaxError: '(' was never closed
